--- a/app/src/main/res/layout/q_app_widget_configure.xml
+++ b/app/src/main/res/layout/q_app_widget_configure.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/favAdViewTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="@string/configure" />
-
-    <EditText
-        android:id="@+id/appwidget_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text" />
+        app:adSize="BANNER"
+        android:layout_marginTop="10dp"
+        app:adUnitId="ca-app-pub-7956399670458508/1874933923"/>
 
     <Button
         android:id="@+id/add_button"
@@ -23,5 +20,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/add_widget" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/favAdViewBottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="10dp"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-7956399670458508/9561852258" />
 
 </LinearLayout>
